fix markbot issues

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="buttons" href="#buttons">Buttons</a></li>
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="cards" href="#cards">Cards</a></li>
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="forms" href="#forms">Forms</a></li>
-                <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="header-footer" href="#header-footer">Header &amp; footer</a></li>
+                <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="header-footer" href="#header-footer">Header footer</a></li>
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="navigation" href="#navigation">Navigation</a></li>
                 <li role="presentation"><a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="sections" href="#sections">Sections</a></li>
             <li class="pad-t-1-2" role="presentation">
@@ -1436,7 +1436,7 @@ width: 250px.</p>
 
         <section class="pattern" id="header-footer" role="tabpanel" hidden aria-hidden="true" >
   <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" >
-    <h2 class="pattern-name peta push-1-4">Header &amp; footer</h2>
+    <h2 class="pattern-name peta push-1-4">Header footer</h2>
       <nav class="pattern-nav">
         <ol class="list-group-inline push-1-4">
             <li><a href="#header-footer-footer">Footer</a></li>
@@ -1464,7 +1464,7 @@ width: 250px.</p>
                   </button>
                 </li>
                 <li>
-                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/header-&amp;-footer/footer.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/header-footer/footer.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
                     <i class="icon i-18">
                       <svg><use xlink:href="#icon-pop-out"></use></svg>
                     </i>
@@ -1480,7 +1480,7 @@ width: 250px.</p>
       <div class="pattern-examples pad-t-1-2 pad-b-1-2">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
           <div class="resizeable-pattern relative" style="">
-            <iframe data-src="patterns/header-&amp;-footer/footer.html" scrolling="no" onload="resizeIframe(this)" ></iframe>
+            <iframe data-src="patterns/header-footer/footer.html" scrolling="no" onload="resizeIframe(this)" ></iframe>
               <div class="resizeable-pattern-length">
                 <div class="resize-handle resize-handle-left" style="">
                   <i class="icon i-18">
@@ -1542,7 +1542,7 @@ width: 250px.</p>
                   </button>
                 </li>
                 <li>
-                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/header-&amp;-footer/header.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/header-footer/header.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
                     <i class="icon i-18">
                       <svg><use xlink:href="#icon-pop-out"></use></svg>
                     </i>
@@ -1558,7 +1558,7 @@ width: 250px.</p>
       <div class="pattern-examples pad-t-1-2 pad-b-1-2">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
           <div class="resizeable-pattern relative" style="">
-            <iframe data-src="patterns/header-&amp;-footer/header.html" scrolling="no" onload="resizeIframe(this)" ></iframe>
+            <iframe data-src="patterns/header-footer/header.html" scrolling="no" onload="resizeIframe(this)" ></iframe>
               <div class="resizeable-pattern-length">
                 <div class="resize-handle resize-handle-left" style="">
                   <i class="icon i-18">
