--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
   <link href="../patterns/banner/banner.css" rel="stylesheet">
   <link href="../patterns/buttons/buttons.css" rel="stylesheet">
   <link href="../patterns/cards/cards.css" rel="stylesheet">
-  <link href="../patterns/header-&-footer/header&footer.css" rel="stylesheet">
+  <link href="../patterns/header-footer/header-footer.css" rel="stylesheet">
   <link href="../patterns/forms/form.css" rel="stylesheet">
   <link href="../patterns/navigation/navigation.css" rel="stylesheet">
   <link href="../patterns/sections/sections.css" rel="stylesheet">
@@ -44,7 +44,7 @@
   <main>
     <div class="subnav-container relative">
       <div class="subnav-wrapper grid grid-middle wrapper relative">
-        <h1 class="subnav-header unit [ xs-1 s-1-2 ] gutter yotta push-1-2">Welcome!</a></h1>
+        <h1 class="subnav-header unit [ xs-1 s-1-2 ] gutter yotta push-1-2">Welcome!</h1>
         <div class="unit xs-1 s-1-2 subnav-link-wrapper">
           <input id="subnav-check" type="checkbox" class="subnav-check absolute">
           <label for="subnav-check" class="subnav-label absolute pin-tr">
