--- a/patterns/header-footer/footer.html
+++ b/patterns/header-footer/footer.html
@@ -9,7 +9,7 @@
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="../buttons/buttons.css" rel="stylesheet">
-  <link href="header&footer.css" rel="stylesheet">
+  <link href="header-footer.css" rel="stylesheet">
 </head>
 <body>
 
