--- a/pages/adopt.html
+++ b/pages/adopt.html
@@ -11,7 +11,7 @@
   <link href="../patterns/banner/banner.css" rel="stylesheet">
   <link href="../patterns/buttons/buttons.css" rel="stylesheet">
   <link href="../patterns/cards/cards.css" rel="stylesheet">
-  <link href="../patterns/header-&-footer/header&footer.css" rel="stylesheet">
+  <link href="../patterns/header-footer/header-footer.css" rel="stylesheet">
   <link href="../patterns/forms/form.css" rel="stylesheet">
   <link href="../patterns/navigation/navigation.css" rel="stylesheet">
   <link href="../patterns/sections/sections.css" rel="stylesheet">
@@ -43,7 +43,7 @@
   <main>
     <div class="subnav-container relative">
       <div class="subnav-wrapper grid grid-middle wrapper relative">
-        <h1 class="subnav-header unit [ xs-1 s-1-2 ] gutter yotta push-1-2">Adopt Us</a></h1>
+        <h1 class="subnav-header unit [ xs-1 s-1-2 ] gutter yotta push-1-2">Adopt Us</h1>
         <div class="unit xs-1 s-1-2 subnav-link-wrapper">
           <input id="subnav-check" type="checkbox" class="subnav-check absolute">
           <label for="subnav-check" class="subnav-label absolute pin-tr">
@@ -64,9 +64,9 @@
       </div>
     </div>
 
-      <div class="gutter-2 pad-t-2 push-0 wrapper">
-        <h2 class="push-0">Large Breed Dogs for Adoption</h2>
-      </div>
+    <div class="gutter-2 pad-t-2 push-0 wrapper">
+      <h2 class="push-0">Large Breed Dogs for Adoption</h2>
+    </div>
 
     <section class="pad-b-2">
       <ul class="grid dogs-wrapper wrapper island-1-4">
@@ -78,8 +78,8 @@
             <h2 class="card-title mega push-0">Abby</h2>
             <p class="content-fill push-0">Great Dane</p>
             <p class="push-0">Female, Age 5</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -89,8 +89,9 @@
             <h2 class="card-title mega push-0">Leroy</h2>
             <p class="content-fill push-0">Great Dane</p>
             <p class="push-0">Male, Age 7</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
+
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -100,8 +101,9 @@
             <h2 class="card-title mega push-0">Salem</h2>
             <p class="content-fill push-0">Great Dane/Mastiff</p>
             <p class="push-0">Male, Age 5</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
+
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -111,8 +113,8 @@
             <h2 class="card-title mega push-0">Ivy</h2>
             <p class="content-fill push-0">Great Dane</p>
             <p class="push-0">Female, Age 3</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -122,8 +124,8 @@
             <h2 class="card-title mega push-0">Griffin</h2>
             <p class="content-fill push-0">Rottie, Bozer and Newf</p>
             <p class="push-0">Male, Age 3</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -133,8 +135,8 @@
             <h2 class="card-title mega push-0">Raven</h2>
             <p class="content-fill push-0">Great Dane</p>
             <p class="push-0">Female, Age 1</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -144,8 +146,8 @@
             <h2 class="card-title mega push-0">Steam Boat</h2>
             <p class="content-fill push-0">Mini Aussie</p>
             <p class="push-0">Female, Age 8</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -155,8 +157,8 @@
             <h2 class="card-title mega push-0">Bell</h2>
             <p class="content-fill push-0">Great Dane</p>
             <p class="push-0">Female, Age 7</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
         </li>
         <li class="unit [ xs-1 s-1-2 m-1-3 ] unit-content-distribute list-group island-1-4">
           <a href="#" class="card dog-info-card icon-link block text-left content-fill unit-content-distribute gutter pad-t-2 pad-b-2">
@@ -166,8 +168,8 @@
             <h2 class="card-title mega push-0">Whisper</h2>
             <p class="content-fill push-0">Great Dane</p>
             <p class="push-0">Female, Age 3</p>
-            <a class="btn">Learn more about...</a>
           </a>
+          <a class="btn">Learn more about...</a>
         </li>
       </ul>
     </section>
@@ -175,21 +177,21 @@
   <footer class="gutter pad-t pad-b footer">
     <div class="grid">
 
-    <ul class="unit [xs-1 m-1-2 ] footer grid push">
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Home</a></li>
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Adopt Us</a></li>
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Help Us</a></li>
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Contact Us</a></li>
-    </ul>
+      <ul class="unit [xs-1 m-1-2 ] footer grid push">
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Home</a></li>
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Adopt Us</a></li>
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Help Us</a></li>
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Contact Us</a></li>
+      </ul>
 
-    <div class="unit [xs-1 m-1-2 ] micro island-1-2 push-0">
-      <p><b>Online Community</b></p>
-      <p>Twitter</p>
-      <p>Facebook</p>
-      <p>YouTube</p>
+      <div class="unit [xs-1 m-1-2 ] micro island-1-2 push-0">
+        <p><b>Online Community</b></p>
+        <p>Twitter</p>
+        <p>Facebook</p>
+        <p>YouTube</p>
+      </div>
+
     </div>
-
-  </div>
 
     <p class="micro island-1-2 push-0">Copyright 2015 Birch Haven Rescue & Rehabilitation Services.<br>All rights reserved.</p>
 
