--- a/pages/form.html
+++ b/pages/form.html
@@ -11,7 +11,7 @@
   <link href="../patterns/banner/banner.css" rel="stylesheet">
   <link href="../patterns/buttons/buttons.css" rel="stylesheet">
   <link href="../patterns/cards/cards.css" rel="stylesheet">
-  <link href="../patterns/header-&-footer/header&footer.css" rel="stylesheet">
+  <link href="../patterns/header-footer/header-footer.css" rel="stylesheet">
   <link href="../patterns/forms/form.css" rel="stylesheet">
   <link href="../patterns/navigation/navigation.css" rel="stylesheet">
   <link href="../patterns/sections/sections.css" rel="stylesheet">
@@ -41,143 +41,142 @@
     </div>
   </header>
 
-  <main>
-    <div class="subnav-container relative">
-      <div class="subnav-wrapper grid grid-middle wrapper relative">
-        <h1 class="subnav-header unit [ xs-1 s-1-2 ] gutter yotta push-1-2">Application</a></h1>
-        <div class="unit xs-1 s-1-2 subnav-link-wrapper">
-          <input id="subnav-check" type="checkbox" class="subnav-check absolute">
-          <label for="subnav-check" class="subnav-label absolute pin-tr">
-            <span class="ir block giga gutter pad-t-1-2 pad-b-1-2">Open Menu</span>
-            <strong class="absolute pin-c h-1 w-1">
-              <span class="subnav-icon subnav-icon-left block absolute"></span>
-              <span class="subnav-icon subnav-icon-right block absolute"></span>
-            </strong>
-          </label>
-          <nav role="navigation" class="subnav" id="subnav">
-            <ul class="subnav-link-group list-group push-0 milli gutter-2 pad-t-1-2 pad-b">
-              <li class="subnav-link-style"><a class="current subnav-link block pad-t-1-2 pad-b-1-2" href="form.html">Application</a></li>
-              <li class="subnav-link-style"><a class="subnav-link block pad-t-1-2 pad-b-1-2" href="#">Donation</a></li>
-              <li><a class="subnav-link block pad-t-1-2 pad-b-1-2" href="#faq">FAQ</a></li>
-            </ul>
-          </nav>
-        </div>
+  <div class="subnav-container relative">
+    <div class="subnav-wrapper grid grid-middle wrapper relative">
+      <h1 class="subnav-header unit [ xs-1 s-1-2 ] gutter yotta push-1-2">Application</h1>
+      <div class="unit xs-1 s-1-2 subnav-link-wrapper">
+        <input id="subnav-check" type="checkbox" class="subnav-check absolute">
+        <label for="subnav-check" class="subnav-label absolute pin-tr">
+          <span class="ir block giga gutter pad-t-1-2 pad-b-1-2">Open Menu</span>
+          <strong class="absolute pin-c h-1 w-1">
+            <span class="subnav-icon subnav-icon-left block absolute"></span>
+            <span class="subnav-icon subnav-icon-right block absolute"></span>
+          </strong>
+        </label>
+        <nav role="navigation" class="subnav" id="subnav">
+          <ul class="subnav-link-group list-group push-0 milli gutter-2 pad-t-1-2 pad-b">
+            <li class="subnav-link-style"><a class="current subnav-link block pad-t-1-2 pad-b-1-2" href="form.html">Application</a></li>
+            <li class="subnav-link-style"><a class="subnav-link block pad-t-1-2 pad-b-1-2" href="#">Donation</a></li>
+            <li><a class="subnav-link block pad-t-1-2 pad-b-1-2" href="#faq">FAQ</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
-    <div class="form">
-      <h2 class="gutter wrapper pad-t">Please fill me out</h2>
+  </div>
+  <div class="form">
+    <h2 class="gutter wrapper pad-t">Please fill me out</h2>
 
-      <div class="">
-        <form class="max-length island" method="post" novalidate>
-          <div class="unit [ xs-1 ] error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
-            <h3 class="push-0">
-              <i class="icon i-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-              <span class="icon-label error-title">There are items that require your attention</span>
-            </h3>
-          </div>
+    <div class="">
+      <form class="max-length island" method="post" novalidate>
+        <div class="unit [ xs-1 ] error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
+          <h3 class="push-0">
+            <i class="icon i-32"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+            <span class="icon-label error-title">There are items that require your attention</span>
+          </h3>
+        </div>
 
-          <div class="push">
-            <label for="name">Your Email</label>
-            <input id="name" required aria-describedby="name-error">
-            <p class="error-message milli island-1-4 push-0" id="name-error">
-              <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-              <span class="icon-label">*Please provide a proper Email</span>
-            </p>
-          </div>
+        <div class="push">
+          <label>Your Email</label>
+          <input id="name-1" required aria-describedby="name-error-1">
+          <p class="error-message milli island-1-4 push-0" id="name-error-1">
+            <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+            <span class="icon-label">*Please provide a proper Email</span>
+          </p>
+        </div>
 
-          <div class="push">
-            <label for="name">How did you hear about Birch Haven Rescue and Rehabilitation</label>
-            <select id="option" name="option">
-              <option>Choose an option</option>
-              <option>Online</option>
-              <option>A Friend</option>
-              <option>Other...</option>
-            </select>
-            <p class="error-message milli island-1-4 push-0" id="name-error">
-              <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-              <span class="icon-label">Please pick an option</span>
-            </p>
-          </div>
+        <div class="push">
+          <label>How did you hear about Birch Haven Rescue and Rehabilitation</label>
+          <select id="option-1" name="option">
+            <option>Choose an option</option>
+            <option>Online</option>
+            <option>A Friend</option>
+            <option>Other...</option>
+          </select>
+          <p class="error-message milli island-1-4 push-0" id="name-error-2">
+            <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+            <span class="icon-label">Please pick an option</span>
+          </p>
+        </div>
 
-          <div class="push">
-            <label for="name">You are currently looking for a...</label>
-            <select id="option" name="option">
-              <option>Choose an option</option>
-              <option>Puppy</option>
-              <option>Adult</option>
-              <option>Senior</option>
-              <option>Any</option>
-            </select>
-            <p class="error-message milli island-1-4 push-0" id="name-error">
-              <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-              <span class="icon-label">Please pick an option</span>
-            </p>
-          </div>
+        <div class="push">
+          <label>You are currently looking for a...</label>
+          <select id="option-2" name="option">
+            <option>Choose an option</option>
+            <option>Puppy</option>
+            <option>Adult</option>
+            <option>Senior</option>
+            <option>Any</option>
+          </select>
+          <p class="error-message milli island-1-4 push-0" id="name-error-3">
+            <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+            <span class="icon-label">Please pick an option</span>
+          </p>
+        </div>
 
-          <div class="push">
-            <label for="name">What pets do you own?</label>
-            <select id="option" name="option">
-              <option>Choose an option</option>
-              <option>Dog</option>
-              <option>Cat</option>
-              <option>Other</option>
-              <option>None</option>
-            </select>
-            <p class="error-message milli island-1-4 push-0" id="name-error">
-              <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-              <span class="icon-label">Please pick an option</span>
-            </p>
-          </div>
+        <div class="push">
+          <label>What pets do you own?</label>
+          <select id="option-3" name="option">
+            <option>Choose an option</option>
+            <option>Dog</option>
+            <option>Cat</option>
+            <option>Other</option>
+            <option>None</option>
+          </select>
+          <p class="error-message milli island-1-4 push-0" id="name-error-4">
+            <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+            <span class="icon-label">Please pick an option</span>
+          </p>
+        </div>
 
-          <div class="push">
-            <label for="name">Please provide a small introduction of yourself</label>
-            <textarea id="name" required aria-describedby="name-error"></textarea>
-            <p class="error-message milli island-1-4 push-0" id="name-error">
-              <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
-              <span class="icon-label">*Please fill out</span>
-            </p>
-          </div>
+        <div class="push">
+          <label>Please provide a small introduction of yourself</label>
+          <textarea id="name-2" required aria-describedby="name-error-5"></textarea>
+          <p class="error-message milli island-1-4 push-0" id="name-error-5">
+            <i class="icon i-16"><svg><use xlink:href="images/icons.svg#error" /></svg></i>
+            <span class="icon-label">*Please fill out</span>
+          </p>
+        </div>
 
-          <div class="push pad-t-1-2">
-            <input class="checkbox-agree" type="checkbox" id="agree" required aria-describedby="agree-error">
-            <label for="agree">I agree to the terms and conditions listed above</label>
-            <p class="error-message milli island-1-4 push-0" id="agree-error">
-              <i class="icon i-16"><svg><use xlink:href="images/icon.svg#error" /></svg></i>
-              <span class="icon-label">You must agree to the terms and conditions.</span>
-            </p>
-          </div>
+        <div class="push pad-t-1-2">
+          <input class="checkbox-agree" type="checkbox" id="agree" required aria-describedby="agree-error-6">
+          <label for="agree">I agree to the terms and conditions listed above</label>
+          <p class="error-message milli island-1-4 push-0" id="agree-error-6">
+            <i class="icon i-16"><svg><use xlink:href="images/icon.svg#error" /></svg></i>
+            <span class="icon-label">You must agree to the terms and conditions.</span>
+          </p>
+        </div>
 
-          <div class="pad-t-1-2">
-            <button class="btn" type="submit">Submit!</button>
-          </div>
-        </form>
-
-        <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
+        <div class="pad-t-1-2">
+          <button class="btn" type="submit">Submit!</button>
+        </div>
+      </form>
 
     </div>
+  </div>
 
-  </main>
   <footer class="gutter pad-t pad-b footer">
     <div class="grid">
 
-    <ul class="unit [xs-1 m-1-2 ] footer grid push">
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Home</a></li>
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Adopt Us</a></li>
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Help Us</a></li>
-      <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Contact Us</a></li>
-    </ul>
+      <ul class="unit [xs-1 m-1-2 ] footer grid push">
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Home</a></li>
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Adopt Us</a></li>
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Help Us</a></li>
+        <li class="micro inline-block island-1-2 unit [s-1 m-1 l-1]"><a class="footer" href="#">Contact Us</a></li>
+      </ul>
 
-    <div class="unit [xs-1 m-1-2 ] micro island-1-2 push-0">
-      <p><b>Online Community</b></p>
-      <p>Twitter</p>
-      <p>Facebook</p>
-      <p>YouTube</p>
+      <div class="unit [xs-1 m-1-2 ] micro island-1-2 push-0">
+        <p><b>Online Community</b></p>
+        <p>Twitter</p>
+        <p>Facebook</p>
+        <p>YouTube</p>
+      </div>
+
     </div>
-
-  </div>
 
     <p class="micro island-1-2 push-0">Copyright 2015 Birch Haven Rescue & Rehabilitation Services.<br>All rights reserved.</p>
 
   </footer>
+
+  <script src="https://thomasjbradley.github.io/form-validation-helper/index.js"></script>
 </body>
 </html>
