--- a/patterns/forms/option.html
+++ b/patterns/forms/option.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="push-1-2">
-      <label for="name">Pick an Option</label>
+      <label>Pick an Option</label>
       <select id="option" name="option">
         <option>Choose an option</option>
         <option>Two</option>
