--- a/patterns/forms/radio.html
+++ b/patterns/forms/radio.html
@@ -23,9 +23,9 @@
 
     <div class="push-1-2 pad-t-1-2">
       <input class="radio" name="yes" type="radio" required aria-describedby="agree-error">
-      <label for="yes">Yes</label>
+      <label>Yes</label>
       <input class="radio" name="no" type="radio" required aria-describedby="agree-error">
-      <label for="no">No</label>
+      <label>No</label>
       <p class="error-message milli island-1-4 push-0" id="agree-error">
         <i class="icon i-16"><svg><use xlink:href="images/icon.svg#error" /></svg></i>
         <span class="icon-label">You must select either yes or no.</span>
