--- a/patterns/navigation/dog-nav.html
+++ b/patterns/navigation/dog-nav.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<a class="dog-nav" href="#">
-  <img href="#dogsname" src="http://placehold.it/250x250" alt="">
-</a>
+  <a class="dog-nav" href="#">
+    <img src="http://placehold.it/250x250" alt="">
+  </a>
 
 </body>
 </html>
