--- a/patterns/sections/sections.html
+++ b/patterns/sections/sections.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Sections</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="../../common/modules.css" rel="stylesheet">
-    <link href="../../common/grid.css" rel="stylesheet">
-    <link href="../../common/type.css" rel="stylesheet">
-    <link href="../../common/theme.css" rel="stylesheet">
-    <link href="sections.css" rel="stylesheet">
-  </head>
-  <body>
-    <section class="section wrapper gutter-2 island pad-b">
-      <div class="unit [xs-1 m-1-2]">
-        <h2>About Us</h2>
-        <p>We are a highly experienced, educated and knowledgeable Great Dane and Giant Canine Breed Rescue plus also assisting Equines, BHRR has a strong focus on the Special Needs – (Deaf and/or Blind, Sick, Senior & Injured)</p>
-        <p>*Reputable/Quality Rescue is about helping the next one in need*</p>
-        <p>Giant Breeds BHRR Assists: Deerhound, Dogue de Bordeaux, English Mastiff, Great Dane, Neapolitan Mastiff, Newfoundland, & Irish Wolfhound</p>
-        <p>Our area of rescue assistance is across North America & our area of adoption placement is ONLY in Ontario, Quebec and some parts of NY, USA</p>
-        <p>We also provide a safe ‘haven’ for animals for life should they not be adopted or are deemed un-adoptable</p>
-        <p>BHRR is a federally registered non-profit group and we are an all Volunteer, Foster Home based rescue without any salaried employees</p>
-      </div>
-    </section>
-  </body>
+<html lang="en-ca">
+<head>
+  <meta charset="utf-8">
+  <title>Sections</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="../../common/modules.css" rel="stylesheet">
+  <link href="../../common/grid.css" rel="stylesheet">
+  <link href="../../common/type.css" rel="stylesheet">
+  <link href="../../common/theme.css" rel="stylesheet">
+  <link href="sections.css" rel="stylesheet">
+</head>
+<body>
+  <section class="section wrapper gutter-2 island pad-b">
+    <div class="unit [xs-1 m-1-2]">
+      <h2>About Us</h2>
+      <p>We are a highly experienced, educated and knowledgeable Great Dane and Giant Canine Breed Rescue plus also assisting Equines, BHRR has a strong focus on the Special Needs – (Deaf and/or Blind, Sick, Senior & Injured)</p>
+      <p>*Reputable/Quality Rescue is about helping the next one in need*</p>
+      <p>Giant Breeds BHRR Assists: Deerhound, Dogue de Bordeaux, English Mastiff, Great Dane, Neapolitan Mastiff, Newfoundland, & Irish Wolfhound</p>
+      <p>Our area of rescue assistance is across North America & our area of adoption placement is ONLY in Ontario, Quebec and some parts of NY, USA</p>
+      <p>We also provide a safe ‘haven’ for animals for life should they not be adopted or are deemed un-adoptable</p>
+      <p>BHRR is a federally registered non-profit group and we are an all Volunteer, Foster Home based rescue without any salaried employees</p>
+    </div>
+  </section>
+</body>
 </html>
